@@ -85,7 +85,7 @@ class EBML_DLL_API EbmlBinary : public EbmlElement {
 			SetValueIsSet();
 		}
 		
-		operator const binary &() const {return *Data;}
+		operator const binary &() const;
 	
 		bool IsDefaultValue() const {
 			return false;
