@@ -2,7 +2,7 @@ Include "*/*.proj"
 
 LIB ebml
 {
-  PROJECT_VERSION 1.0.0
+  PROJECT_VERSION 1.0.1
 
   INCLUDE .
   EXPINCLUDE .
