@@ -1,3 +1,7 @@
+2010-06-xx robux4
+New 1.0.1 version:
+    - move some operator code in the .cpp files (MSVC has issues in DLLs)
+
 2010-06-04 robux4/mosu
 New 1.0.0 version:
     - rename the library .so name as it's backward incompatible
